PoS page: Fix overflow issue

--- a/style/stylus/persistence-of-sound.styl
+++ b/style/stylus/persistence-of-sound.styl
@@ -3,11 +3,26 @@
 @import 'flexbox'
 
 #persistence-of-sound
-	overflow: visible
+	display: block
+	margin: 0
+	padding: 0
 	
-	+wide()
-		max-width: 90%
-		margin: 0 auto
+	#body-wrapper
+		grid-12()
+		width: 100%
+		
+		padding: 1em 5vw
+		
+		+square()
+			padding-bottom: 2em
+
+		+landscape()
+			padding: 1em 2em 2em 2em
+	
+		+wide()
+			max-width: 90%
+			margin: 0 auto
+			
 	
 	h1, h2, h3, h4, h5, p, ul, li, aside, img, section, video
 		grid-column: 1 / span 12
@@ -35,7 +50,7 @@
 	img
 		&#trio-square
 			display: block
-			margin: 2em 0
+			margin-top: 0.5em
 			
 			+landscape()
 				display: none
